@@ -4,6 +4,7 @@ Changelog
 6.0.0 (2017-XX-XX)
 ------------------
 
+ * removed Swift_Mime_HeaderFactory interface
  * removed Swift_MailTransport and Swift_Transport_MailTransport
  * removed Swift_Encoding
  * removed the Swift_Transport_MailInvoker interface and Swift_Transport_SimpleMailInvoker class
